[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "gradio>=6.20.0",
    "protobuf>=7.35.1",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]
