[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "accelerate>=1.15.0",
    "bitsandbytes>=0.43.1",
    "gradio>=6.20.0",
    "protobuf>=7.35.1",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.2",
    "torch>=2.4.0",
    "transformers>=4.45.0",
]
